syntax = "proto3";
package todo.v1;

option go_package = "github.com/ericbamba/barin-todo/gen/proto/todo/v1;todov1";

service TodoService {
  rpc CreateTodo (CreateTodoRequest) returns (CreateTodoResponse);
  rpc UpdateTodo (UpdateTodoRequest) returns (UpdateTodoResponse);
  rpc DeleteTodo (DeleteTodoRequest) returns (DeleteTodoResponse);
  rpc ListTodos   (ListTodosRequest)  returns (ListTodosResponse);
}

enum Status { UNKNOWN = 0; OPEN = 1; DONE = 2; }

enum SortBy { 
  CREATED_AT = 0; 
  DEADLINE = 1; 
  TITLE = 2; 
  STATUS = 3; 
}

enum SortOrder { 
  ASC = 0; 
  DESC = 1; 
}

message Todo {
  int64  id          = 1;
  string title       = 2;
  string description = 3;
  Status status      = 4;
  string deadline    = 5;
  string created_at  = 6;
  string updated_at  = 7;
  bool   deleted     = 8;
}

message CreateTodoRequest  { string title = 1; string description = 2; string deadline = 3; }
message CreateTodoResponse { Todo todo = 1; }

message UpdateTodoRequest  { int64 id = 1; string title = 2; string description = 3; Status status = 4; string deadline = 5; }
message UpdateTodoResponse {}

message DeleteTodoRequest  { int64 id = 1; }
message DeleteTodoResponse {}

message ListTodosRequest   { 
  Status status_filter = 1; 
  SortBy sort_by = 2;
  SortOrder sort_order = 3;
}
message ListTodosResponse  { repeated Todo todos = 1; } //repeared - array